...

    return Column(
      children: [
        _buildListTile(
          icon: Icons.person_outline,
          iconColor: AppTheme.lovePink,
          title: '修改昵称',
          trailing: Text(
            user.name,
            style: TextStyle(color: AppTheme.textSecondary),
          ),
          onTap: () {
            setState(() {
...
